
Thu Dec 13 20:17:08 CET 2001 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: implemented AddRange(), CopyTo().

2001-11-19  Miguel de Icaza  <miguel@ximian.com>

	* DictionaryBase.cs: Implemented.

Wed Nov 14 16:45:49 CET 2001 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: implement ArrayListEnumerator.
	* Hashtable.cs: hardcode the prime number table.

2001-11-06 Nick Drochak <ndrochak@gol.com>
	* Queue.cs: Fixes from Ricardardo.  QueueTest also updated.

2001-11-04 Nick Drochak <ndrochak@gol.com>
	* Queue.cs: Fixed small syntax errors that were preventing the compile.
	I changed the build file to include Queue.cs as well.

2001-11-04 Nick Drochak <ndrochak@gol.com>
	* ArrayList.cs: Fixed "off by one" error when shifting left the array when
	items are removed.

	* CollectionBase.cs: Added OnValidate(), OnRemove() and OnRemoveComplete()
	hook methods to the RemoveAt() method.

2001-11-04 Nick Drochak <ndrochak@gol.com>
	* ArrayList.cs: Added private enumerator class and make GetEnumerator()
	methods return an instance of it.

Tue Sep 25 18:52:48 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: fix Insert () to check capacity, not count.

Tue Sep 25 16:54:54 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* DictionaryEntry.cs: added.

2001-08-10  Dietmar Maurer  <dietmar@ximian.com>

	* common.src: removed duplicate entries

2001-08-08 Nick Drochak <ndrochak@gol.com>

         * ReadOnlyCollectionBase.cs: Initialized private member.
         * CollectionBase.cs: Initialized private member.
	 * common.src : Added ReadOnlyCollectionBase.cs and CollectionBase.cs
	 * /mcs/class/makefile: Used $(SYSTEMROOT) instead of hard coded //c/winnt
	 * /mcs/makefile: Used $(SYSTEMROOT) instead of hard coded //c/winnt

2001-08-08 Nick Drochak <nick@jobdragon.com>

         * CollectionBase.cs: Add
         * ReadOnlyCollectionBase.cs: Add
         * CollectionBaseTest.cs: Add
         * ReadOnlyCollectionBaseTest.cs: Add
